[package]
name = "glib-signal"
version = "0.3.0" # keep in sync with html_root_url
authors = ["arcnmx"]
edition = "2021"
rust-version = "1.70"

description = "GObject signal bindings"
keywords = ["glib", "gobject", "signal", "async", "futures"]

documentation = "http://docs.rs/glib-signal/"
repository = "https://github.com/arcnmx/glib-signal.rs"
readme = "src/README.md"
license = "MIT"

include = [
	"/src/**",
	"/README*",
	"/COPYING*",
]

[package.metadata.docs.rs]
features = ["futures"]
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]

[badges]
maintenance = { status = "passively-maintained" }

[dependencies]
glib = { version = "0.18" }
futures-core = { version = "0.3", optional = true }
futures-channel = { version = "0.3", optional = true }

[features]
default = []
futures = ["dep:futures-core", "dep:futures-channel"]

[workspace]
members = ["examples"]
